refactor: clamp forum page size